--- a/sample_config.env
+++ b/sample_config.env
@@ -16,6 +16,7 @@ KATDRIVE_CRYPT = ""
 UPTOBOX_TOKEN = ""
 DIRECT_INDEX = ""
 TERA_COOKIE = ""
+FORCE_SUB = "" # add user name of channel without [@]
 
 # Update
 UPSTREAM_REPO = "https://github.com/SilentDemonSD/FZBypassBot"
