--- a/sample_config.env
+++ b/sample_config.env
@@ -1,7 +1,7 @@
 # Required
-BOT_TOKEN = ""
-API_HASH = ""
-API_ID = ""
+BOT_TOKEN = "6609713747:AAH7Ijmim8l-dzaw2fn_0eB8aZgikanVVzc"
+API_HASH = "bbd37235e41a95d03bc144ea6bc7b2cd"
+API_ID = "23941369"
 AUTH_CHATS = "" # Separate multiple ids by space and : for topic_ids
 
 # Optional
